<resources>
    <string name="app_name" translatable="false">Andrew Samir EmiratesAuction</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="cars_machinery"><![CDATA[Cars & Machinery]]></string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="gridView">Grid View</string>
    <string name="lot">Lot#</string>
    <string name="bids">Bids</string>
    <string name="timeLeft">Time Left</string>
    <string name="rotate">0</string>
</resources>
