<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_45sdp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/radius_default"
    app:cardElevation="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3.04">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_local_bar"
                android:tint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:text="@string/filter"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/txt_default" />
        </LinearLayout>

        <include
            layout="@layout/xml_vertical_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_filter_list"
                android:tint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/sort"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/txt_default" />
        </LinearLayout>

        <include
            layout="@layout/xml_vertical_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_dashboard"
                android:tint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:text="@string/gridView"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/txt_default" />
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>