<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp"
    android:layout_margin="@dimen/_7sdp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/radius_default"
    app:cardElevation="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        android:weightSum="9">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">


            <com.joooonho.SelectableRoundedImageView
                android:id="@+id/imgRvCarItemCarImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:sriv_border_width="0dip"
                app:sriv_left_bottom_corner_radius="@dimen/radius_default"
                app:sriv_left_top_corner_radius="@dimen/radius_default"
                app:sriv_right_bottom_corner_radius="0dip"
                app:sriv_right_top_corner_radius="0dip" />

            <ImageView
                android:id="@+id/imgRvCarItemFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_7sdp"
                android:src="@drawable/ic_action_favorite_border" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRvCarItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lines="2"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold"
                tools:text="Chevorlet 2017" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layoutDirection="locale"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRvCarItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:textColor="@color/colorPrice"
                    android:textSize="@dimen/txt_large"
                    android:textStyle="bold"
                    tools:text="17,000" />

                <TextView
                    android:id="@+id/tvRvCarItemCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:textColor="@color/Currency"
                    android:textSize="@dimen/txt_small"
                    tools:text="AED"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.samir.andrew.andrewsamiremiratesauction.customViews.CustomItem
                    android:id="@+id/cuiRvCarItemLot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    app:ci_title="@string/lot" />

                <com.samir.andrew.andrewsamiremiratesauction.customViews.CustomItem
                    android:id="@+id/cuiRvCarItemBids"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    app:ci_title="@string/bids" />

                <com.samir.andrew.andrewsamiremiratesauction.customViews.CustomItem
                    android:id="@+id/cuiRvCarItemTimeLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    app:ci_isLastItem="true"
                    app:ci_title="@string/timeLeft" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>